@@ -83,8 +83,20 @@
         <servlet-name>AuthenticationEngine</servlet-name>
         <url-pattern>/AuthnEngine</url-pattern>
     </servlet-mapping>
+    
+    <!-- Servlet protected by an external authentication service -->
+    <servlet>
+        <servlet-name>ExternalAuthHandler</servlet-name>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.ExternalAuthnSystemServlet</servlet-class>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
 
-    <!-- Servlet protected by container user for RemoteUser authentication -->
+    <servlet-mapping>
+        <servlet-name>ExternalAuthHandler</servlet-name>
+        <url-pattern>/Authn/External</url-pattern>
+    </servlet-mapping>
+
+    <!-- Servlet protected by container used for RemoteUser authentication -->
     <servlet>
         <servlet-name>RemoteUserAuthHandler</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserAuthServlet</servlet-class>
@@ -100,7 +112,7 @@
     <servlet>
         <servlet-name>UsernamePasswordAuthHandler</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.UsernamePasswordLoginServlet</servlet-class>
-        <load-on-startup>4</load-on-startup>
+        <load-on-startup>3</load-on-startup>
     </servlet>
 
     <servlet-mapping>
